--- a/styles/components.module.css
+++ b/styles/components.module.css
@@ -46,8 +46,8 @@
 .cardWrapper {
   margin: 0;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: 1.5fr 4fr 1fr;
   width: 100%;
   max-width: 20rem;
   aspect-ratio: 3 / 4;
@@ -65,6 +65,37 @@
 
 .cardImageWrapper {
   display: block;
+  grid-column: 1 / span 3;
+}
+
+.cardInfoWrapper {
+  grid-column: 1 / span 3;
+  padding: 1rem;
+}
+
+.cardText {
+  grid-column: 1 / span 3;
+}
+
+.cardAttack {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+  align-self: center;
+  justify-self: center;
+}
+
+.cardType {
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
+  align-self: center;
+  justify-self: center;
+}
+
+.cardDefense {
+  grid-column: 3 / span 1;
+  grid-row: 3 / span 1;
+  align-self: center;
+  justify-self: center;
 }
 
 /* CARDS DISPLAY STYLING */
