--- a/styles/components.module.css
+++ b/styles/components.module.css
@@ -3,8 +3,8 @@
   width: 100%;
   height: auto;
   display: grid;
-  grid-template-columns: 1;
-  grid-template-rows: 2;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, auto);
   grid-gap: 0.5rem;
   align-items: center;
   justify-items: center;
@@ -104,7 +104,8 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
   grid-gap: 0.5rem;
-  width: 40rem; }
+  width: 100%;
+  max-width: 40rem; }
   @media screen and (max-width: 40rem) {
     .cardsGridWrapper {
       grid-template-columns: 1fr;
